--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
 		<h1 class="game-title">MINEFIELD GAME!</h1>
 		<div class="container game-controller">
 			<div class="rows-controller ">
-				<label for="">Rows 
-					<i id="rows-up" class="fa fa-2x fa-chevron-circle-down controller-icons"></i>
-					<i id="rows-down" class="fa fa-2x fa-chevron-circle-up controller-icons"></i>
+				<label for=""> 
+					<i id="rows-up" class="fa fa-2x fa-chevron-circle-up controller-icons"></i>
+					<span class="txtRows">ROWS</span>
+					<i id="rows-down" class="fa fa-2x fa-chevron-circle-down controller-icons"></i>
 				</label>
 				<div class="options-controller">
 					<input id="rows-number" type="text" class="form-control form-control-sm input-controll" value="15" readonly>
@@ -33,9 +34,10 @@
 				<img class="img-smiley" src="./src/img/smiley-happy.svg"/>
 			</div>
 			<div class="columns-controller">
-				<label for="">Colums 
-					<i id="columns-up" class="fa fa-2x fa-chevron-circle-down controller-icons"></i>
-					<i id="columns-down" class="fa fa-2x fa-chevron-circle-up controller-icons"></i>
+				<label for=""> 
+					<i id="columns-up" class="fa fa-2x fa-chevron-circle-up controller-icons"></i>
+					<span class="txtColums">COLS</span>
+					<i id="columns-down" class="fa fa-2x fa-chevron-circle-down controller-icons"></i>
 				</label>
 				<div>
 					<input id="columns-number" type="text" class="form-control form-control-sm input-controll" value="30" readonly>
@@ -50,15 +52,17 @@
 		
 	</div>
     
+	<div id="loader" class="spinner-grow text-primary" role="status">
+		<span class="sr-only">Loading...</span>
+	</div>
 
+  </body>
 
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
 	<!-- Game JavaScript -->
 	<script src="./src/js/game.js"></script>
 
-  </body>
 </html>
