Measure cell neighbor bombs

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 				
 			</div>
 			<div class="rows-controller ">
-				<img class="img-smiley" src="./src/img/smiley-happy.svg"/>
+				<img id="img-smiley-happy" src="./src/img/smiley-happy.svg"/>
+				<img id="img-smiley-sad" src="./src/img/smiley-sad.svg"/>
 			</div>
 			<div class="columns-controller">
 				<label for=""> 
@@ -45,6 +46,7 @@
 			</div>
 		</div>
 		<button id="btn-start" type="button" class="btn btn-success btn-sm btn-block">Start Game</button>
+		<button id="btn-restart" type="button" class="btn btn-primary btn-sm btn-block">Restart Game</button>
 		<div class="container game-area">
 			
 			
